
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 SEP 05a
  * in model/chem/_Cs_Air_Plasma_15s/
    - separated the Lenard reactions into several groups (negative ions, cesium reactions, and 
      other high temperature air reactions)
    - added the Park 1993 model as a substitute to the Lenard 1964 high temperature air
      model
      

2020 SEP 04a
  * in model/fluid/_Favre-Reynolds/fluid_post.c, model/fluid/_Favre-Reynolds_Tv/fluid_post.c,
    model/fluid/_Navier-Stokes/fluid_post.c
    - added N as a post variable
  * in model/fluid/_Navier-Stokes*/fluid_source.c
    - in find_Saxi(), now allows nodes to have a negative y
  * in model/share/fluid_share.c
    - in find_Saxi(), now allows nodes to have a negative y
    - in find_Saxi(), got rid of extra source terms for turbulence modeling derived by J Etele
  * in bin
    - added RAM-C-II.wrp
    

2020 SEP 03a
  * in model/chem
    - added _Air_5s
    - removed _H2_Air_Plasma_18s_78r_Jachimowsky-Dunn-Kang-Macheret
    - removed _Air_Plasma_12s_42r_Dunn-Kang-Macheret
    - removed _Air_4s_13r
  * in model/chem/_Air_Plasma_11s/chem.hh
    - added proper references to boyd2007a, park1993a, lenard1964a
  * in src/control.c
    - added reference boyd2007a
    

2020 SEP 02a
  * in model/chem
    - added _H2_Air_Plasma_13s
  * in model/fluid/*/fluid_post.c
    - in find_post_variable_name_fluid() and find_post_variable_value_fluid(), changed the
      mass fractions and number densities to molar fractions
      

2020 AUG 31b
  * in model/chem/_H2_Cs_Air_Plasma_22s/chem.c
    - fixed a bug: the ionization reactions shouldn't set W to zero but add to it
  * in bin
    - added bluntwedge.wrp
    

2020 AUG 31a
  * in cycle/restime/_CDF+/restime.c